--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -223,7 +223,7 @@ h6 {
 #hero {
   width: 100%;
   height: 100vh;
-  background: url("../img/hero-bg-2.jpg") top center;
+  background: url("../img/hero-bg.jpeg") top center;
   background-size: cover;
 }
 
